--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
+				<version>2.18.1</version>
 				<configuration>
 					<suiteXmlFiles>
 						<!-- TestNG suite XML files -->
@@ -40,7 +40,7 @@
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<version>3.141.59</version>
+			<version>3.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.testng</groupId>
@@ -75,20 +75,20 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>29.0-jre</version>
+            <version>18.0</version>
         </dependency>
 
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-api</artifactId>
-            <version>2.45.0</version>
+            <version>3.0.0</version>
         </dependency>
 
       
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-remote-driver</artifactId>
-            <version>2.45.0</version>
+            <version>3.0.0</version>
         </dependency>
 
         <dependency>
@@ -96,10 +96,16 @@
             <artifactId>java-client</artifactId>
             <version>2.1.0</version>
         </dependency>
+        
+        <dependency>
+            <groupId>commons-io</groupId>
+    		<artifactId>commons-io</artifactId>
+    		<version>2.6</version>
+		</dependency>
 
       
         <!-- For JSON deserialization when using the Selenium API against the Selenium HUB -->
-<!--         <dependency>
+         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.9.13</version>
@@ -110,6 +116,15 @@
             <artifactId>jackson-core-asl</artifactId>
             <version>1.9.13</version>
         </dependency>
-	</dependencies> -->
+        
+        <dependency>
+        	<groupId>org.seleniumhq.selenium</groupId>
+        	<artifactId>selenium-leg-rc</artifactId>
+        	<version>3.12.0</version>
+        </dependency>
+    
+	</dependencies> 
+	
+	
 
 </project>
